// Vitest Snapshot v1

exports[`MatchSnapShot test AskMessageBox 1`] = `
<div
  className="saloon--byusers"
  data-testid="divtestone"
>
  <div
    className="title--services"
  >
    <h1>
      Rooms
    </h1>
  </div>
  <div
    className="divsection--saloon"
  />
  <div />
</div>
`;

exports[`MatchSnapShot test ChooseMemberToAsk 1`] = `
<div
  className="saloon--byusers"
  data-testid="divtestone"
>
  <div
    className="title--services"
  >
    <h1>
      Rooms
    </h1>
  </div>
  <div
    className="divsection--saloon"
  >
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Hard Disk - SSD
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        CPU
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        RAM
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Drivers
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Systemd
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Process
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Client-Server
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Protocols
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Request - Response
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Firewall
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Proxy - VPN
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Cyber-Security
      </h3>
    </section>
  </div>
  <div />
</div>
`;

exports[`MatchSnapShot test ConfirmationOrigin 1`] = `
<div
  className="saloon--byusers"
  data-testid="divtestone"
>
  <div
    className="title--services"
  >
    <h1>
      Rooms
    </h1>
  </div>
  <div
    className="divsection--saloon"
  >
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Hard Disk - SSD
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        CPU
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        RAM
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Drivers
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Systemd
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Process
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Client-Server
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Protocols
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Request - Response
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Firewall
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Proxy - VPN
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Cyber-Security
      </h3>
    </section>
  </div>
  <div />
</div>
`;

exports[`MatchSnapShot test Online 1`] = `
<div
  className="saloon--byusers"
  data-testid="divtestone"
>
  <div
    className="title--services"
  >
    <h1>
      Rooms
    </h1>
  </div>
  <div
    className="divsection--saloon"
  />
  <div />
</div>
`;

exports[`Online MatchSnapShot test AskMessageBox 1`] = `
<div
  className="saloon--byusers"
  data-testid="divtestone"
>
  <div
    className="title--services"
  >
    <h1>
      Rooms
    </h1>
  </div>
  <div
    className="divsection--saloon"
  />
  <div />
</div>
`;

exports[`Online MatchSnapShot test ChooseMemberToAsk 1`] = `
<div
  className="saloon--byusers"
  data-testid="divtestone"
>
  <div
    className="title--services"
  >
    <h1>
      Rooms
    </h1>
  </div>
  <div
    className="divsection--saloon"
  >
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Hard Disk - SSD
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        CPU
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        RAM
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Drivers
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Systemd
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Process
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Client-Server
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Protocols
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Request - Response
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Firewall
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Proxy - VPN
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Cyber-Security
      </h3>
    </section>
  </div>
  <div />
</div>
`;

exports[`Online MatchSnapShot test ConfirmationOrigin 1`] = `
<div
  className="saloon--byusers"
  data-testid="divtestone"
>
  <div
    className="title--services"
  >
    <h1>
      Rooms
    </h1>
  </div>
  <div
    className="divsection--saloon"
  >
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Hard Disk - SSD
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        CPU
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        RAM
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Drivers
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Systemd
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Process
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Client-Server
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Protocols
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Request - Response
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Firewall
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Proxy - VPN
      </h3>
    </section>
    <section
      className="section--saloon"
    >
      <h3
        className="titlebyroom"
      >
        Cyber-Security
      </h3>
    </section>
  </div>
  <div />
</div>
`;

exports[`Online MatchSnapShot test Online 1`] = `
<div
  className="saloon--byusers"
  data-testid="divtestone"
>
  <div
    className="title--services"
  >
    <h1>
      Rooms
    </h1>
  </div>
  <div
    className="divsection--saloon"
  />
  <div />
</div>
`;
